--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 *.rbc
+*.sassc
+.sass-cache
 capybara-*.html
 .rspec
-/log
-/tmp
+.rvmrc
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/test/*
 /db/*.sqlite3
-/public/system
+/public/system/*
 /coverage/
-/spec/tmp
+/spec/tmp/*
 **.orig
 rerun.txt
 pickle-email-*.html
-config/initializers/secret_token.rb
-config/secrets.yml
-
-## Environment normalisation:
-/.bundle
-/vendor/bundle
-
-# these should all be checked in to normalise the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+.project
+# /config/database.yml
+/public/uploads
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+Gemfile.lock
